added lewis criticisms

--- a/default.html
+++ b/default.html
@@ -49,20 +49,28 @@
       hyphens: auto;
       margin-left: 80px;
     }
-    h1,h2,h3,h4,h5,h6 {text-align:left; font-family: monospace;}
+    h1,h2,h3,h4,h5,h6 {
+      text-align:left; 
+      font-family: monospace;
+      width: 50vw;
+    }
     p {
       width: 50vw;
       font-size: 16px;
     }
-    h1 {
-      width: 50vw;
+    h3 {
+      font-size: 20px;
+    }
+    li {
+      font-size: 16px;
     }
 
     code {font-family: monospace;}
     .sourceCode {font-family: monospace;}
+
     .navbar {
       font-family: monospace; 
-      font-size: 1.5em;
+      font-size: 13px;
       color: white;
     }
 
@@ -77,6 +85,14 @@
       padding: 1em;
       line-height: 2;
       text-align: left;
+    }
+
+    nav li {
+      font-size: 10px;
+    }
+
+    table {
+      font-size: 16px;
     }
 
     .text {
