--- a/default.html
+++ b/default.html
@@ -19,6 +19,11 @@
   $endif$
 
   <script src="https://hypothes.is/embed.js" async></script>
+
+  <!--<!--TikZJax-->-->
+  <!--<link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">-->
+  <!--<script src="https://tikzjax.com/v1/tikzjax.js"></script>-->
+
   <script>
     window.hypothesisConfig = function() {
       return {
