--- a/default.html
+++ b/default.html
@@ -77,6 +77,7 @@
     h1 { font-size: 2rem; }
     h2 { font-size: 1.5rem; }
     h3 { font-size: 1.25rem;; }
+    h4 { font-size: 1.125rem;; }
 
     code, .sourceCode {
       padding: 0.2em 0.4em;
@@ -111,12 +112,46 @@
       font-size: 16px;
     }
 
-    .text {
+    .textBase {
         font-family: monospace;
     }
 
+
+    .epigraph {
+      margin: 2em 4em;           /* vertical and horizontal margins */
+      font-style: italic;        /* italicize the quote */
+      font-size: 1.1em;          /* slightly larger than normal text */
+      color: #555555;            /* subtle gray color for elegance */
+      border-left: 3px solid #cccccc; /* vertical line on the left */
+      padding-left: 1em;         /* spacing between border and text */
+      quotes: "“" "”" "‘" "’";   /* fancy quotation marks */
+      position: relative;
+    }
+
+    .epigraph p {
+      margin: 0 0 0.5em 0;
+      text-indent: 0;
+    }
+
+    .epigraph p:first-child::before {
+      content: open-quote;
+      font-size: 2em;
+      line-height: 0;
+      vertical-align: -0.4em;
+      margin-right: 0.1em;
+      color: #999999;
+    }
+
+    .epigraph p:last-child {
+      text-align: right;
+      font-style: normal;       /* author name not italic */
+      font-weight: bold;
+      margin-top: 0.5em;
+      color: #333333;
+    }
+
     /*Animation*/
-    .text::after {
+    .textBase::after {
         content: '';
         display: inline-block;
         width: 5px; /* Width of the cursor */
@@ -168,7 +203,7 @@
 
 <body>
   <header style="display: flex; align-items: center; justify-content: space-around;">
-    <a href="/" class="text">valerii.shevchenko:~#</a>
+    <a href="/" class="textBase">valerii.shevchenko:~#</a>
     <a href="/blog">мысли/</a>
     <a href="/publications">публикации/</a>
     <a href="https://vsdesigner.netlify.app/">портфолио↗</a>
