--- a/default.html
+++ b/default.html
@@ -20,7 +20,7 @@
   $endif$
 
   <script src="https://hypothes.is/embed.js" async></script>
-  <script src="https://unpkg.com/petite-vue" defer init></script>
+  <!-- <script src="https://unpkg.com/petite-vue" defer init></script> -->
 
   <script>
     window.hypothesisConfig = function() {
@@ -74,7 +74,7 @@
       max-width: 100%;
     }
 
-    h1 { font-size: 2rem; }
+    h1 { font-size: 1.75rem; }
     h2 { font-size: 1.5rem; }
     h3 { font-size: 1.25rem;; }
     h4 { font-size: 1.125rem;; }
@@ -116,6 +116,15 @@
         font-family: monospace;
     }
 
+    .caption {
+        font-size: 13px;
+        text-align: center;
+        margin-top: 0px;
+    }
+
+    .table {
+      margin: 60px 0px;
+    }
 
     .epigraph {
       margin: 2em 4em;           /* vertical and horizontal margins */
@@ -124,7 +133,7 @@
       color: #555555;            /* subtle gray color for elegance */
       border-left: 3px solid #cccccc; /* vertical line on the left */
       padding-left: 1em;         /* spacing between border and text */
-      quotes: "“" "”" "‘" "’";   /* fancy quotation marks */
+      quotes: "“" "”";   /* fancy quotation marks */
       position: relative;
     }
 
@@ -211,7 +220,8 @@
 
 
   $if(title)$
-    <h1 class="title">$title$</h1>
+    <h1>$title$</h2>
+    $if(subtitle)$
     $if(generate_toc)$
     $if(toc)$
     <nav id="$idprefix$TOC" role="doc-toc">
@@ -220,7 +230,6 @@
     </nav>
     $endif$
     $endif$
-    $if(subtitle)$
     <p style="font-size: 14px;">
       <!--<strong>Abstract:</strong> $subtitle$-->
       $subtitle$
@@ -230,7 +239,7 @@
     <main>
       <div style="display: flex;">
         $if(date)$
-        <p class="date"><i>$date$</i></p>
+        <p class="date">Последнее обновление:<i>$date$</i></p>
         $endif$
         $if(word_count)$
         <p class="word_count"><i>$word_count$</i></p>
