--- a/default.html
+++ b/default.html
@@ -41,12 +41,12 @@
   Beep Boop. As you were. -->
 
   <style>
-    $styles.html()$
+    /* $styles.html()$ */
      :root {
         --color: blue;
         --max-content-width: 700px;
-        --font-family-mono: monospace, monospace;
-        --font-family-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        --font-family: monospace;
+        /* --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, */
           Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         }
 
@@ -55,23 +55,20 @@
       margin: 0 auto;
       max-width: var(--max-content-width);
       padding: 1rem 1rem 3rem;
-      font-family: var(--font-family-mono);
       text-align: justify; 
-      font-family: monospace;
+      font-family: var(--font-family);
       line-height: 1.5; 
-      margin-left: 80px;
+      /* margin-left: 80px; */
     }
     h1,h2,h3,h4,h5,h6 {
       margin-top: 1.5em;
       margin-bottom: 0.5em;
       text-align:left; 
       font-family: monospace;
-      width: 50vw;
     }
     p,li {
-      width: 50vw;
       font-size: 1rem;
-      max-width: 100%;
+      max-width: var(--max-content-width);
     }
 
     h1 { font-size: 1.75rem; }
@@ -113,7 +110,7 @@
     }
 
     .textBase {
-        font-family: monospace;
+      font-family: monospace;
     }
 
     .caption {
