--- a/default-new.html
+++ b/default-new.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -43,10 +42,10 @@
 
   <style>
     /* $styles.html()$ */
-     :root {
+    :root {
         --color: blue;
         --max-content-width: 700px;
-        }
+    }
 
     body {
       font-family: monospace;
@@ -198,7 +197,7 @@
     }
 
     .hypothesis {
-      position: absolute;
+      position: fixed;
       right: 60px;
       top: 130px;
       width: 175px;
@@ -230,6 +229,19 @@
         color: white;
     }
 
+    button {
+      font-family: monospace;
+    }
+
+    .inline-button {
+        background-color: #00f;
+        color: white;
+        cursor: pointer;
+        border: none;
+        transition: all 0.2s ease-in-out;
+        border-radius: 10px;
+    }
+
     .blueButton {
         background-color: #00f;
         color: white;
@@ -249,6 +261,10 @@
         border: 2px dashed #00f;
     }
 
+    .explainer {
+        display: none;
+    }
+
     .epigraph p:first-child::before {
       content: open-quote;
       font-size: 2em;
@@ -266,25 +282,6 @@
       color: #333333;
     }
 
-    /*Animation*/
-    .textBase::after {
-        content: '';
-        display: inline-block;
-        width: 5px; /* Width of the cursor */
-        height: 16px; /* Height should match the text line height */
-        background-color: var(--color); /* Cursor color */
-        animation: blink 1s cubic-bezier(0.19, 1, 0.22, 1) infinite; /* Animation for blinking effect */
-    }
-
-    @keyframes blink {
-        0%, 100% {
-            opacity: 0; /* Cursor is invisible at start and end */
-        }
-        50% {
-            opacity: 1; /* Cursor is fully visible at halfway point */
-        }
-    }
-    @media (max-width: 1300px) {
     nav {
       display: none;
     }
@@ -308,7 +305,6 @@
     </a>
   </header>
 
-  <div style="display: flex">
   <div class="content">
   $if(title)$
     <h1>$title$</h1>
@@ -337,7 +333,6 @@
       </div>
       $body$
     </article>
-  </div>
   </div>
   </body>
 </html>
