--- a/default-new.html
+++ b/default-new.html
@@ -108,7 +108,7 @@
     figcaption {
       font-size: 13px;
       font-style: italic;
-      text-align: justify;
+      text-align: center;
       margin-top: 10px;
       width: 80%;
       justify-self: center;
