--- a/default-new.html
+++ b/default-new.html
@@ -7,7 +7,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/katex/dist/katex.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/katex/dist/contrib/auto-render.min.js"></script>
   <script data-goatcounter="https://dadaisme.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-  <script src="assets/p5.min.js"></script>
+  <script src="/assets/p5.min.js"></script>
 
   $for(author-meta)$
     <meta name="author" content="$author-meta$">
