готово введение к 1 главе; начал править часить про ТИ

--- a/default-new.html
+++ b/default-new.html
@@ -290,8 +290,11 @@
     nav {
       display: block;
       position: fixed;
+      overflow-y: auto;
+      overflow-x: hidden;
       top: 320px;
       right: 60px;
+      max-width: 500px;
       border: 1px dashed #00f;
       font-size: 12px;
       padding: 20px;
